@@ -4,6 +4,7 @@
 [-] Drop ObjectUtils.CreateInstanceWithServiceProvider . Use ActivatorUtilities.CreateInstance .
 [*] DictionaryUtils.GetValueOrDefault is only available for netstandard 1.6 and 2.0 .
 [+] Add LeftJoin collection extension.
+[+] Add ReadOnlySpan overloads for StringUtils.
 
 4.1.0 [2021-11-25]
 [+] Add .NET 5.0 target.
